--- a/src/components/Plans/Plan.module.css
+++ b/src/components/Plans/Plan.module.css
@@ -1,8 +1,18 @@
-.plan{
+.tree_list{
+    cursor: pointer;
+    list-style: none;
+    /*width:100%;*/
+}
+
+.tree_item{
     
-    width: 60%;
+}
+
+.tree_row{
+    
+    width: 100%;
     height: 30px;
-    margin-left: 20%;
+    /*margin-left: 20%;*/
     /*padding-right: 20%;*/
 }
 
@@ -22,6 +32,12 @@
 }
 
 .plan_clock_button{
+    vertical-align: middle;
+    width:15px;
+    height:15px;
+}
+
+.plan_clock_button:hover{
     width:20px;
     height:20px;
 }
