--- a/src/components/Plans/NewPlan/NewPlanForm.module.css
+++ b/src/components/Plans/NewPlan/NewPlanForm.module.css
@@ -1,7 +1,13 @@
 .control input {
+    width: 250px;
     background:lightgray;
 }
 
 .control input:focus {
     background: white;
+}
+
+.placeholder {
+    width: 20px;
+    height: 20px;
 }
