--- a/src/components/Plans/Plan.module.css
+++ b/src/components/Plans/Plan.module.css
@@ -33,8 +33,8 @@
 }
 
 .plan_left_button_img{
-    width: 35%;
-    height: 35%;
+    width: 60%;
+    height: 60%;
 }
 
 .plan_left_button_img:hover{
@@ -90,7 +90,8 @@
 
 .plan_calendar{
     position:fixed;
-    right: 0;
+    top: 20%;
+    right: 10%;
     z-index: 100;
     overflow: hidden;
 }
